--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,38 +1,40 @@
 <header class="header"> 
-	<div class="header__container _container">
-      <div class="header__body">
-         <div class="header__column">
-            <nav data-da=".menu__body,767.98,2" class="header__menu menu">
-               <ul class="menu__list">
-                  <li class="menu__item"><a data-goto=".main-block_goto" href="#" class="menu__link">HOME</a></li>
-                  <li class="menu__item"><a data-goto=".about_goto" href="#" class="menu__link">ABOUT</a></li>
-                  <li class="menu__item"><a data-goto=".team_goto" href="#" class="menu__link">TEAM</a></li>
-                  <li class="menu__item"><a data-goto=".book_goto" href="#" class="menu__link">BOOKING</a></li>
-               </ul>
-            </nav>
+   <div class="header__wrapper">
+      <div class="header__container _container">
+         <div class="header__body">
+            <div class="header__column">
+               <nav data-da=".menu__body,767.98,2" class="header__menu menu">
+                  <ul class="menu__list">
+                     <li class="menu__item"><a data-goto=".main-block_goto" href="#" class="menu__link">HOME</a></li>
+                     <li class="menu__item"><a data-goto=".about_goto" href="#" class="menu__link">ABOUT</a></li>
+                     <li class="menu__item"><a data-goto=".team_goto" href="#" class="menu__link">TEAM</a></li>
+                     <li class="menu__item"><a data-goto=".book_goto" href="#" class="menu__link">BOOKING</a></li>
+                  </ul>
+               </nav>
+            </div>
+            <div class="header__column">
+               <a href="" class="header__logo">
+                  <img src="img/logo.png" alt="logo">
+               </a>
+            </div>
+            <div class="header__column">
+               <nav data-da=".menu__body,767.98,1" class="header__menu menu menu_r">
+                  <ul class="menu__list">
+                     <li class="menu__item"><a data-goto=".menu_goto" href="#" class="menu__link">MENU</a></li>
+                     <li class="menu__item"><a data-goto=".gallery_goto" href="#" class="menu__link">GALERIE</a></li>
+                     <li class="menu__item"><a data-goto=".private_goto" href="#" class="menu__link">EVENTS</a></li>
+                     <li class="menu__item"><a data-goto=".contact_goto" href="#" class="menu__link">CONTACT</a></li>
+                  </ul>
+               </nav>
+            </div>
          </div>
-         <div class="header__column">
-            <a href="" class="header__logo">
-               <img src="img/logo.png" alt="logo">
-            </a>
-         </div>
-         <div class="header__column">
-            <nav data-da=".menu__body,767.98,1" class="header__menu menu menu_r">
-               <ul class="menu__list">
-                  <li class="menu__item"><a data-goto=".menu_goto" href="#" class="menu__link">MENU</a></li>
-                  <li class="menu__item"><a data-goto=".gallery_goto" href="#" class="menu__link">GALERIE</a></li>
-                  <li class="menu__item"><a data-goto=".private_goto" href="#" class="menu__link">EVENTS</a></li>
-                  <li class="menu__item"><a data-goto=".contact_goto" href="#" class="menu__link">CONTACT</a></li>
-               </ul>
-            </nav>
-         </div>
+         <button type="button" class="header-menu__icon icon-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+         </button>
+         <div class="menu__body"></div>
       </div>
-      <button type="button" class="header-menu__icon icon-menu">
-         <span></span>
-         <span></span>
-         <span></span>
-      </button>
-		<div class="menu__body"></div>
-	</div>	
+   </div>	
 </header>
 
